--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,33 @@
       {
         "src": "nuxt.config.js",
         "use": "@nuxtjs/vercel-builder",
-        "config": {}
+        "config": {
+          "serverFiles": ["server-middleware/**"]
+        }
+      },
+      {
+        "src": "api/**/*.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/contents/(?<id>[^/]+)",
+        "dest": "/api/contents/[id].js?id=$id",
+        "methods": ["GET", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Methods": "GET",
+          "Access-Control-Allow-Headers": "Content-Type"
+        }
+      },
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/$1.js",
+        "methods": ["GET", "OPTIONS"],
+        "headers": {
+          "Access-Control-Allow-Methods": "GET",
+          "Access-Control-Allow-Headers": "Content-Type"
+        }
       }
     ]
   }
