--- a/vercel.json
+++ b/vercel.json
@@ -3,33 +3,12 @@
     "builds": [
       {
         "src": "nuxt.config.js",
-        "use": "@nuxtjs/vercel-builder",
+        "use": "@nuxtjs/vercel-builder@0.21.3",
         "config": {
-          "serverFiles": ["server-middleware/**"]
-        }
-      },
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/contents/(?<id>[^/]+)",
-        "dest": "/api/contents/[id].js?id=$id",
-        "methods": ["GET", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Methods": "GET",
-          "Access-Control-Allow-Headers": "Content-Type"
-        }
-      },
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1.js",
-        "methods": ["GET", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Methods": "GET",
-          "Access-Control-Allow-Headers": "Content-Type"
+          "serverFiles": [
+            "api/**",
+            ".nuxt/dist/sitemap-routes.json"
+          ]
         }
       }
     ]
