--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "nuxt.config.js",
-        "use": "@nuxtjs/vercel-builder@0.21.3",
+        "use": "@nuxtjs/vercel-builder@0.22.1",
         "config": {
           "serverFiles": [
             "api/**",
@@ -11,5 +11,10 @@
           ]
         }
       }
-    ]
+    ],
+    "functions": {
+        "api/**/*.py": {
+          "excludeFiles": "public/**"
+        }
+    }
   }
