--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@nuxtjs/vercel-builder": "^0.24.0",
     "axios": "^0.21.4",
     "core-js": "^3.25.3",
     "js-cookie": "^3.0.5",
