--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,11 @@
           "Service-Worker-Allowed": "/"
         }
       }
-    ]
+    ],
+    "functions": {
+        "api/*.js": {
+          "memory": 3008,
+          "maxDuration": 30
+        }
+      }
   }
