--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,13 @@
     "builds": [
       {
         "src": "nuxt.config.js",
-        "use": "@nuxtjs/vercel-builder",
+        "use": "@nuxtjs/vercel-builder@0.21.3",
         "config": {
-          "serverFiles": ["package.json"]
+          "serverFiles": [
+            "package.json",
+            "server/**"
+        ],
+        "internalServer": true
         }
       }
     ],
